# dialogue-generation

./: .env.local  .gitignore  CHECKLIST.md  CONFIG_GUIDE.md  QUICK_START.md  QUICK_TEST.md  README.md  STARTUP_GUIDE.md  TESTING_GUIDE.md  WEBSOCKET_TROUBLESHOOTING.md  check_services.sh  dummy_websocket_test.html  dump.rdb  list_transcripts.py  main.py  pyproject.toml  requirements.txt  run.sh  start_app.sh  start_tmux.sh  stop_app.sh  stop_tmux.sh  test_websocket.html  transcript.txt.dec  transcript.txt.enc
backend/: README.md  api_server.py  auth.py  chatbot.py  config.py  dump.rdb  list_transcripts.py  main.py  pyproject.toml  requirements.txt  room_user_mapping.py  setup_database.py  setup_redis.py  start_server.py  test_websocket.py  transcript copy.txt
backend/database/: __init__.py  database.py  models.py  transcript_redis_service.py
backend/transcripts/: 1.json  11.json  m.json  m1.json  m11.json  m111.json  m1111.json  m11111.json  m1111111.json  m2.json  meeet1.json  meet1.json  mfjsfgjr.json  mmm.json  mmmmmm.json  mmmmmm1.json  mock_room.json  njk.json  p.json  p1.json  p11111.json  pp.json  ppp.json  prit.json  prit1.json  test.json
backend/vector_db/: __init__.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ConnectionPanel.tsx  Dashboard.tsx  Login.tsx  ProtectedRoute.tsx  Signup.tsx  TranscriptViewer.tsx
frontend/src/config/: api.ts  livekit.ts
frontend/src/services/: authService.ts  chatbotService.ts  livekit.ts  tokenService.ts  transcriptService.ts
(+1 files in other folders)
